; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/opensm/opensm/extr_osm_sm_state_mgr.c_osm_report_sm_state.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/opensm/opensm/extr_osm_sm_state_mgr.c_osm_report_sm_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@OSM_LOG_SYS = common dso_local global i32 0, align 4
@FILE_ID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"Entering %s state\0A\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"ENTERING SM %s STATE\00", align 1
@OSM_LOG_VERBOSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @osm_report_sm_state(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca [64 x i8], align 16
  %4 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 1
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i8* @osm_get_sm_mgr_state_str(i32 %9)
  store i8* %10, i8** %4, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* @OSM_LOG_SYS, align 4
  %15 = load i32, i32* @FILE_ID, align 4
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @osm_log_v2(i32 %13, i32 %14, i32 %15, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* %16)
  %18 = getelementptr inbounds [64 x i8], [64 x i8]* %3, i64 0, i64 0
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @snprintf(i8* %18, i32 64, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i8* %19)
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = load i32, i32* @OSM_LOG_VERBOSE, align 4
  %25 = getelementptr inbounds [64 x i8], [64 x i8]* %3, i64 0, i64 0
  %26 = call i32 @OSM_LOG_MSG_BOX(i32 %23, i32 %24, i8* %25)
  ret void
}

declare dso_local i8* @osm_get_sm_mgr_state_str(i32) #1

declare dso_local i32 @osm_log_v2(i32, i32, i32, i8*, i8*) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1

declare dso_local i32 @OSM_LOG_MSG_BOX(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
